--- a/wp-content/themes/ilfonti/assets/css/style.css
+++ b/wp-content/themes/ilfonti/assets/css/style.css
@@ -143,7 +143,15 @@ footer {
   color: white
 }
 
+footer a {
+  color: white;
+}
+
 footer li {
+  list-style: none;
+}
+
+.iconos_sociales li {
 
   display: inline-block;
 }
